--- a/SporSalonuYonetim/Views/Shared/_Layout.cshtml
+++ b/SporSalonuYonetim/Views/Shared/_Layout.cshtml
@@ -6,9 +6,7 @@
     <title>@ViewData["Title"] - Spor Salonu Paneli</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.2/pulse/bootstrap.min.css">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SporSalonuYonetim.styles.css" asp-append-version="true" />
 </head>
@@ -53,11 +51,14 @@
                             </a>
                         </li>
 
-                        <li class="nav-item ms-lg-2">
-                            <a class="nav-link btn btn-sm btn-info text-white px-3" href="/swagger" target="_blank">
-                                <i class="bi bi-filetype-json"></i> API Dokümanı
-                            </a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item ms-lg-2">
+                                <a class="nav-link btn btn-sm btn-info text-white px-3" href="/swagger" target="_blank">
+                                    <i class="bi bi-filetype-json"></i> API Dokümanı
+                                </a>
+                            </li>
+                        }
 
                     </ul>
 
@@ -83,8 +84,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-
-   
-
 </body>
 </html>
