--- a/SporSalonuYonetim/Views/SporSalonus/Delete.cshtml
+++ b/SporSalonuYonetim/Views/SporSalonus/Delete.cshtml
@@ -1,39 +1,36 @@
 ﻿@model SporSalonuYonetim.Models.SporSalonu
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Sil";
 }
 
-<h1>Delete</h1>
+<div class="container mt-5">
+    <div class="alert alert-danger shadow-sm">
+        <h3 class="fw-bold"><i class="bi bi-exclamation-triangle-fill"></i> Emin misiniz?</h3>
+        <p><strong>@Model.Ad</strong> adlı salonu silmek üzeresiniz. Bu işlem geri alınamaz.</p>
+    </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>SporSalonu</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ad)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ad)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Adres)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Adres)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CalismaSaatleri)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CalismaSaatleri)
-        </dd>
-    </dl>
-    
+    <div class="card border-danger mb-4 shadow-sm">
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-3">Salon Adı</dt>
+                <dd class="col-sm-9">@Model.Ad</dd>
+
+                <dt class="col-sm-3">Şehir</dt>
+                <dd class="col-sm-9">@Model.Sehir</dd>
+
+                <dt class="col-sm-3">Adres</dt>
+                <dd class="col-sm-9">@Model.Adres</dd>
+
+                <dt class="col-sm-3">Telefon</dt>
+                <dd class="col-sm-9">@Model.Telefon</dd>
+            </dl>
+        </div>
+    </div>
+
     <form asp-action="Delete">
-        <input type="hidden" asp-for="SporSalonuId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="hidden" asp-for="Id" />
+        <button type="submit" class="btn btn-danger btn-lg"><i class="bi bi-trash-fill"></i> Evet, Sil</button>
+        <a asp-action="Index" class="btn btn-outline-secondary btn-lg ms-2">İptal</a>
     </form>
 </div>
